--- a/recipes/s'more-pancakes.html
+++ b/recipes/s'more-pancakes.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fresh Orange Juice recipe!</title>
+    <title>S'more Pancake recipe!</title>
 </head>
 <body>
-    <!-- https://www.allrecipes.com/recipe/89229/fresh-orange-juice/ -->
+    <!-- https://www.allrecipes.com/recipe/272867/smores-pancakes/ -->
     <!-- Title of webpage -->
-    <h1>Fresh Orange Juice!</h1>
+    <h1>S'more Pancakes!</h1>
     <!-- Image of recipe -->
     <!-- Description of recipe -->
     <!-- Unordered list of ingredients -->
