--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>My Recipes</h1>
     <a href="./recipes/orange-juice.html">Fresh Orange Juice!</a>
-    
-    
+    <a href="./recipes/orange-chicken.html">Orange Chicken!</a>
+    <a href="./recipes/s'more-pancakes.html">S'more Pancakes!</a>
 </body>
 </html>
