Added images to webapges

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>My Recipes</h1>
+    <img src="images/chef-logo.jpeg" alt="Chef log">
     <a href="./recipes/orange-juice.html">Fresh Orange Juice!</a>
     <a href="./recipes/orange-chicken.html">Orange Chicken!</a>
     <a href="./recipes/s'more-pancakes.html">S'more Pancakes!</a>
