--- a/recipes/orange-juice.html
+++ b/recipes/orange-juice.html
@@ -9,6 +9,7 @@
     <!-- Title of webpage -->
     <h1>Fresh Orange Juice!</h1>
     <!-- Image of recipe -->
+    <img src="../images/orange-juice.jpeg" alt="Orange Juice Picture">
     <!-- Description of recipe -->
     <!-- Unordered list of ingredients -->
     <!-- Ordered list of recipe steps -->
