--- a/recipes/s'more-pancakes.html
+++ b/recipes/s'more-pancakes.html
@@ -9,6 +9,7 @@
     <!-- Title of webpage -->
     <h1>S'more Pancakes!</h1>
     <!-- Image of recipe -->
+    <img src="../images/s'more-pancake.jpeg" alt="s'more pancake picture">
     <!-- Description of recipe -->
     <!-- Unordered list of ingredients -->
     <!-- Ordered list of recipe steps -->
