--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -9,6 +9,7 @@
     <!-- Title of webpage -->
     <h1>Orange Chicken!</h1>
     <!-- Image of recipe -->
+    <img src = "../images/orange-chicken.jpg" alt="Orange Chicken Picture">
     <!-- Description of recipe -->
     <!-- Unordered list of ingredients -->
     <!-- Ordered list of recipe steps -->
