Filled in information for orange juice webpage

--- a/recipes/orange-juice.html
+++ b/recipes/orange-juice.html
@@ -11,8 +11,23 @@
     <!-- Image of recipe -->
     <img src="../images/orange-juice.jpeg" alt="Orange Juice Picture">
     <!-- Description of recipe -->
+    <h2>About Orange Juice</h2>
+        <p> 
+            Fresh orange juice takes a little work, but it tastes much better than orange juice from 
+            concentrate. I came up with this recipe in response to a request about how to make fresh-squeezed 
+            orange juice. You may also use a citrus reamer to do this. If you want less pulp, use a hand 
+            juicer with a strainer.
+        </p>
     <!-- Unordered list of ingredients -->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 Oranges</li>
+    </ul>
     <!-- Ordered list of recipe steps -->
+    <h2>Recipe</h2>
+    <ol>
+        <li>Lightly smack each orange on the counter. Cut each orange in half and squeeze juice into a glass.</li>
+    </ol>
     <!-- Return to homepage link -->
     <a href="../index.html">Return to homepage</a>
 </body>
