Filled in all recipe pages

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -11,8 +11,70 @@
     <!-- Image of recipe -->
     <img src = "../images/orange-chicken.jpg" alt="Orange Chicken Picture">
     <!-- Description of recipe -->
+    <h2>About Orange Chicken</h2>
+    <p>
+        This orange chicken recipe is sticky, sweet, and delicious. It tastes similar to the orange chicken 
+        from a popular Chinese restaurant in the mall! It's easier to make than you think for delicious 
+        takeout at home.
+    </p>
     <!-- Unordered list of ingredients -->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1.5 cups water</li>
+        <li>1/3 cup rice vinegar</li>
+        <li>1/2cup lemon juice</li>
+        <li>2.5 tablespoons soy sauce</li> 
+        <li>2 tablespoons orange juice</li>
+        <li>1 cup packed brown sugar</li>
+        <li>2 tablespoons chopped green onion</li>
+        <li>1 tablespoon grated orange zest</li>
+        <li>1/2 teaspoon minced fresh ginger root</li>
+        <li>1/3 teaspoon minced garlic</li>
+        <li>1/4 teaspoon red pepper flakes</li>
+        <li>3 tablespoons cornstarch</li>
+        <li>2 tablespoons water</li>
+    </ul>  
     <!-- Ordered list of recipe steps -->
+    <h2>Recipe</h2>
+    <ol>
+        <!-- Step 1-->
+        <li>Combine water, rice vinegar, lemon juice, soy sauce, and orange juice for sauce into a saucepan over medium-high heat. 
+            Stir in brown sugar, green onion, orange zest, ginger, garlic, and pepper flakes; bring to a boil. 
+            Remove from heat, and cool for 10 to 15 minutes.
+        </li>
+        <!-- Step 2-->
+        <li>
+            Place chicken in a resealable plastic bag. 
+            Pour in 1 cup cooled sauce. Seal the bag, and refrigerate for at least 2 hours. 
+            Reserve the remaining sauce.
+        </li>
+        <!-- Step 3 -->
+        <li>
+            Mix flour, salt, and pepper in another resealable plastic bag.
+        </li>
+        <!-- Step 4 -->
+        <li>
+            Remove chicken from the marinade and place into the bag of seasoned flour. 
+            Seal the bag and shake to coat.
+        </li>
+        <!-- Step 5 -->
+        <li>
+            Heat the olive oil in a large skillet over medium heat. 
+            Cook chicken in the hot skillet until browned on both sides. 
+            Remove to a paper towel-lined plate and cover with aluminum foil. Wipe out the skillet.
+        </li>
+        <!-- Step 6 -->
+        <li>
+            Pour reserved sauce into the skillet and bring to a boil over medium-high heat.
+        </li>
+        <!-- Step 7 -->
+        <li>
+            Mix together cornstarch and water until completely smooth. 
+            Stir into the boiling sauce. Reduce heat to medium-low, add the chicken, and simmer, 
+            stirring occasionally, until cooked through, about 5 minutes.
+        </li>
+
+    </ol>
     <!-- Return to homepage link -->
     <a href="../index.html">Return to homepage</a>
 </body>
