--- a/recipes/s'more-pancakes.html
+++ b/recipes/s'more-pancakes.html
@@ -11,8 +11,47 @@
     <!-- Image of recipe -->
     <img src="../images/s'more-pancake.jpeg" alt="s'more pancake picture">
     <!-- Description of recipe -->
+    <p>
+        Quick and easy chocolate pancakes, garnished with the key components of s'mores.
+    </p>
     <!-- Unordered list of ingredients -->
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup milk</li>
+        <li>1 (.55 ounce) package instant hot chocolate mix</li>
+        <li>2 cups baking mix (such as Bisquick ®)</li>
+        <li>2 eggs</li>
+        <li>3 tablespoons white sugar</li>
+        <li>1 tablespoon unsweetened baking cocoa</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>cooking spray</li>
+        <li>3 tablespoons chocolate syrup, or to taste</li>
+        <li>3 tablespoons whipped cream, or to taste</li>
+        <li>3 tablespoons miniature marshmallows, or to taste</li>
+        <li>1 graham cracker, crushed into fine crumbs</li>
+    </ul>
     <!-- Ordered list of recipe steps -->
+    <h2>Recipe</h2>
+    <ol>
+        <!-- Step 1 -->
+        <li>
+            Whisk milk and hot chocolate together in a large bowl until smooth. 
+            Add baking mix, eggs, sugar, cocoa, and vanilla extract; whisk until combined.
+        </li>
+        <!-- Step 2-->
+        <li>
+            Grease a large skillet with cooking spray and set over medium-high heat. 
+            Pour in 1/4 cup batter for each pancake. 
+            Cook until bubbles form on the top, 2 to 3 minutes. 
+            Flip with a spatula and continue cooking until golden brown on the edges, 2 to 3 minutes more. Transfer pancakes to a plate. Repeat with remaining batter.
+        </li>
+        <!-- Step 3 -->
+        <li>
+            Drizzle chocolate syrup over pancakes. 
+            Top with whipped cream, marshmallows, and graham cracker 
+            crumbs.
+        </li>
+    </ol>
     <!-- Return to homepage link -->
     <a href="../index.html">Return to homepage</a>
 </body>
