Added a description in homepage

--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
 <body>
     <h1>My Recipes</h1>
     <img src="images/chef-logo.jpeg" alt="Chef log">
-    <a href="./recipes/orange-juice.html">Fresh Orange Juice!</a>
-    <a href="./recipes/orange-chicken.html">Orange Chicken!</a>
-    <a href="./recipes/s'more-pancakes.html">S'more Pancakes!</a>
+    <h2>Welcome Everybody!</h2>
+    <p>
+        This website has a whole three recipes you can go through!
+        If your looking for specifically these three recipes (Orange Juice, Orange Chicken, and S',mores Pancakes), then you've
+        come to the right place.
+    </p>
+    <h2>Recipe Links</h2>
+    <ul>
+        <li><a href="./recipes/orange-juice.html">Fresh Orange Juice!</a></li>
+        <li><a href="./recipes/orange-chicken.html">Orange Chicken!</a></li>
+        <li><a href="./recipes/s'more-pancakes.html">S'more Pancakes!</a></li>
+    </ul>
 </body>
 </html>
