Return to top feature added to all webapges

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Recipe Homepage</title>
 </head>
 <body>
-    <h1>My Recipes</h1>
+    <h1 id="return top">My Recipes</h1>
     <img src="images/chef-logo.jpeg" alt="Chef log">
     <h2>Welcome Everybody!</h2>
     <p>
@@ -19,5 +19,6 @@
         <li><a href="./recipes/orange-chicken.html">Orange Chicken!</a></li>
         <li><a href="./recipes/s'more-pancakes.html">S'more Pancakes!</a></li>
     </ul>
+    <a href="#return top">Return to top</a>
 </body>
 </html>
