--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -7,7 +7,7 @@
 <body>
     <!-- https://www.allrecipes.com/recipe/61024/asian-orange-chicken/ -->
     <!-- Title of webpage -->
-    <h1>Orange Chicken!</h1>
+    <h1 id="return top">Orange Chicken!</h1>
     <!-- Image of recipe -->
     <img src = "../images/orange-chicken.jpg" alt="Orange Chicken Picture">
     <!-- Description of recipe -->
@@ -76,6 +76,7 @@
 
     </ol>
     <!-- Return to homepage link -->
-    <a href="../index.html">Return to homepage</a>
+    <p><a href="../index.html">Return to homepage</a></p>
+    <p><a href="#return top">Return to top</a></p>
 </body>
 </html>
