--- a/recipes/orange-juice.html
+++ b/recipes/orange-juice.html
@@ -7,7 +7,7 @@
 <body>
     <!-- https://www.allrecipes.com/recipe/89229/fresh-orange-juice/ -->
     <!-- Title of webpage -->
-    <h1>Fresh Orange Juice!</h1>
+    <h1 id="return top">Fresh Orange Juice!</h1>
     <!-- Image of recipe -->
     <img src="../images/orange-juice.jpeg" alt="Orange Juice Picture">
     <!-- Description of recipe -->
@@ -29,6 +29,7 @@
         <li>Lightly smack each orange on the counter. Cut each orange in half and squeeze juice into a glass.</li>
     </ol>
     <!-- Return to homepage link -->
-    <a href="../index.html">Return to homepage</a>
+    <p><a href="../index.html">Return to homepage</a></p>
+    <p><a href="#return top">Return to top</a></p>
 </body>
 </html>
