--- a/recipes/s'more-pancakes.html
+++ b/recipes/s'more-pancakes.html
@@ -7,7 +7,7 @@
 <body>
     <!-- https://www.allrecipes.com/recipe/272867/smores-pancakes/ -->
     <!-- Title of webpage -->
-    <h1>S'more Pancakes!</h1>
+    <h1 id="return top">S'more Pancakes!</h1>
     <!-- Image of recipe -->
     <img src="../images/s'more-pancake.jpeg" alt="s'more pancake picture">
     <!-- Description of recipe -->
@@ -53,6 +53,7 @@
         </li>
     </ol>
     <!-- Return to homepage link -->
-    <a href="../index.html">Return to homepage</a>
+    <p><a href="../index.html">Return to homepage</a></p>
+    <p><a href="#return top">Return to top</a></p>
 </body>
 </html>
